2004-12-13  Adam Heath  <doogie@brainfood.com>

	* configure, configure.ac, scripts/GCCWarning.pm:
	  Add more warnings from gcc 3.4.

2004-12-13  Adam Heath  <doogie@brainfood.com>

	* scripts/sort-warnings.pl:
	  Add bash and nm to the list of programs to exclude from the
	  list.  Also exclude the libtool msg about extracting symbols.

2004-12-14  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/JPasswordField.java:
        Resynced with GNU Classpath.

	2004-12-13  Michael Koch  <konqueror@gmx.de>

        * javax/swing/JPasswordField.java: Updated javadocs.

2004-12-14  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/JLayeredPane.java,
	libraries/javalib/javax/swing/JInternalFrame.java:
        Resynced with GNU Classpath.

	2004-12-13  Michael Koch  <konqueror@gmx.de>

        * javax/swing/JLayeredPane.java
        (getLayer): Fixed return type, made public.
        (getPosition): Use new getLayer().
        (SetPosition): Likewise.
        (getIndexOf): Likewise.
        (remove): Likewise.
        * javax/swing/JInternalFrame.java
        (getLayer): Use new JLayeredPane.getLayer().

2004-12-14  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffe/main.c:
	Fixed broken .class ending detection to make gjdoc run again.

	Reported by: Apache Gump.

2004-12-14  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/external.c:
	Improved native library lookup debug output in case of errors.

2004-12-14  Dalibor Topic  <robilad@kaffe.org>

	* config/i386/threads.h:
	(THREADSTACKSIZE) doubled to 128k with jit, and 256 with intrp
	to hopefully make dom2 test suite run on gump.

2004-12-14  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/external.c:
	Improved initial native library lookup debug output.

2004-12-13  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/table/TableColumn.java:
	Resynced with GNU Classpath.

	2004-12-13  Michael Koch  <konqueror@gmx.de>
